# tscpp

./: .gitignore  README.md  meson.build
libraries/: meson.build
libraries/JS/: Boolean.h  Console.h  Number.cpp  Number.h  meson.build
libraries/Ty/: Error.cpp  Error.h  ErrorOr.h  Formatter.h  Optional.h  StringBuffer.h  StringView.cpp  StringView.h  Verify.h  View.h
meta/: compile
src/: Codegen.cpp  Codegen.h  Lex.cpp  Lex.h  Parse.cpp  Parse.h  Source.h  Token.cpp  Token.h  main.cpp  meson.build
tests/: meson.build
